feat: Update dependencies and improve WebSocket configuration for better performance and stability